Basic Code Added AWS s3

--- a/Backend/foodiesapi/src/main/resources/application.properties
+++ b/Backend/foodiesapi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=foodiesapi
+
+#mongodb Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/Foodies
+
+
+#AWS s3 configuration
+aws.access.key=${AWS_ACCESS_KEY}
+aws.secret.key=${AWS_SECRET_KEY}
+aws.region=us-east-1
