--- a/Backend/foodiesapi/pom.xml
+++ b/Backend/foodiesapi/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.31.63</version>
+		</dependency>
 	</dependencies>
 
 	<build>
