File Upload Added

--- a/Backend/foodiesapi/src/main/resources/application.properties
+++ b/Backend/foodiesapi/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/Foodies
 aws.access.key=${AWS_ACCESS_KEY}
 aws.secret.key=${AWS_SECRET_KEY}
 aws.region=us-east-1
+aws.s3.bucketName=foodies-foods-images
