--- a/Backend/foodiesapi/src/main/resources/application.properties
+++ b/Backend/foodiesapi/src/main/resources/application.properties
@@ -9,3 +9,5 @@ aws.access.key=${AWS_ACCESS_KEY}
 aws.secret.key=${AWS_SECRET_KEY}
 aws.region=us-east-1
 aws.s3.bucketName=foodies-foods-images
+
+jwt.secret.key=dfvkndfdnvkAJdmLKDnvnfvdfnvwoiejroiefelkgnee
