--- a/Backend/foodiesapi/src/main/resources/application.properties
+++ b/Backend/foodiesapi/src/main/resources/application.properties
@@ -11,3 +11,6 @@ aws.region=us-east-1
 aws.s3.bucketName=foodies-foods-images
 
 jwt.secret.key=dfvkndfdnvkAJdmLKDnvnfvdfnvwoiejroiefelkgnee
+
+razorpay_key=razorpay_key
+razorpay_secret=razorpay_secret
